<resources>
    <string name="app_name">Kadai03_pi12a_16</string>
    <string name="title">課題03　レイアウト作成</string>
    <string name="author">PI12A_16 朱社佳</string>
    <string name="result">0</string>
    <string name="process">1+2+3</string>
    <string name="clear">Ｃ</string>
    <string name="back">←</string>
    <string name="plus">＋</string>
    <string name="minus">－</string>
    <string name="mult">×</string>
    <string name="divide">÷</string>
    <string name="plumin">±</string>
    <string name="dot">・</string>
    <string name="equal">＝</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="bracket">()</string>
</resources>
